--- a/mission1.html
+++ b/mission1.html
@@ -109,9 +109,9 @@
 		<br />
 		<br />
 		请输入密码:
-		<input type="text" name="password1" placeholder="这是一个文本输入框" />
+		<input type="password" name="password1" placeholder="这是一个文本输入框" />
 		请重复输入密码:
-		<input type="text" name="password2" placeholder="这是一个文本输入框" />
+		<input type="password" name="password2" placeholder="这是一个文本输入框" />
 		<br />
 		<br />
 		密码为6-16位英文数字
