--- a/mission1.html
+++ b/mission1.html
@@ -13,13 +13,13 @@
 		<li><a href="#">导航链接四</a></li>
 	</ul>
 	<h2>文章一级标题</h2>
-	<h2>文章二级标题</h2>
+	<h3>文章二级标题</h3>
 	<p>文章作者 文章发表时间</p>
 	<p>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，换行了<br />这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，换行了<br />这是一个很长很长的段落，这是一个很长很长的段落,<a href="http://ife.baidu.com">这里有一个链接连接到http://ife.baidu.com</a>这是一个很长很长的段落，这是一个很长很长的段落,<b>这里有个粗体字</b>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落。</p>
 	<img src="http://i1.sinaimg.cn/IT/cr/2009/1231/3001336294.jpg">
 	<p>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，换行了<br />这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落,<b>这里有个粗体字</b>这是一个很长很长的段落，这是一个很长很长的段落,<a href="http://ife.baidu.com" target="_blank">这里是个链接点击后打开新窗口链接到http://ife.baidu.com</a>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落。</p>
 	<h2>另一篇文章一级标题</h2>
-	<h2>文章二级标题</h2>
+	<h3>文章二级标题</h3>
 	<p>文章作者 文章发表时间</p>
 	<p>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，换行了<br />这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，换行了<br />这是一个很长很长的段落，这是一个很长很长的段落,<a href="http://ife.baidu.com">这里有一个链接连接到http://ife.baidu.com</a>这是一个很长很长的段落，这是一个很长很长的段落,<b>这里有个粗体字</b>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落。</p>
 	<img src="http://i1.sinaimg.cn/IT/cr/2009/1231/3001336294.jpg">
@@ -42,7 +42,7 @@
 		<dd><div>好看的图片</div><div><img src="http://i1.sinaimg.cn/IT/cr/2009/1231/3001336294.jpg"></div></dd>
 	</dt>
 	<h2>最后一篇文章一级标题</h2>
-	<h2>文章二级标题</h2>
+	<h3>文章二级标题</h3>
 	<p>文章作者 文章发表时间</p>
 	<ol>
 		<li>排名1</li>
@@ -104,6 +104,6 @@
 		爱好:<input type="checkbox" name="yundong" />运动<input type="checkbox" name="yishu" />艺术<input type="checkbox" name="kexue" />科学 
 		个人描述:<textarea>这是一个多行输入框，输入您的个人描述</textarea><input type="submit" name="tijiao" value="确认提交" />
 	</form>
-	<footer>版权所有&copy</footer>
+	版权所有&copy
 </body>
 </html>
